# python-module-with-cython-source

./: README.md  pyproject.toml  setup.py
module/: __init__.py  factorial.pyi  factorial.pyx
module/example/: __init__.py  module.pyi  module.pyx
